--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     
     <title>Porfolio</title>
   </head>
-  <body>
+  <body class="scroll-smooth">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
